--- a/coredns/lab-configmap.yaml
+++ b/coredns/lab-configmap.yaml
@@ -5,12 +5,13 @@ metadata:
   namespace: coredns
 data:
   db.home.lab: |
+    $TTL  30M
     @ IN SOA ns1.home.lab. home.lab. (
         20200101 ; serial
         4H ; refresh
         1H ; retry
         7D ; expire
-        4H ; Negative Cache TTL) 
+        4H); Negative Cache TTL
       IN NS ns1
     ns1       IN A 192.168.1.150
     node01    IN A 192.168.1.20
