--- a/coredns/lab-deployment.yaml
+++ b/coredns/lab-deployment.yaml
@@ -1,11 +1,9 @@
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: lab-coredns
   namespace: coredns
   labels:
-    k8s-app: kube-dns
-  annotations:
     app.kubernetes.io/name: coredns
     app.kubernetes.io/instance: lab-coredns
 spec:
@@ -20,95 +18,50 @@ spec:
         app.kubernetes.io/name: coredns
         app.kubernetes.io/instance: lab-coredns
     spec:
+      containers:
+      - name: coredns-lab
+        image: coredns/coredns:latest
+        imagePullPolicy: Always
+        args: [ "-conf", "/etc/coredns/Corefile" ]
+        ports:
+          - name: dns-tcp
+            containerPort: 53
+            protocol: TCP
+          - name: dns-udp
+            containerPort: 53
+            protocol: UDP
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 60
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 5
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8181
+            scheme: HTTP
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 5
+        volumeMounts:
+        - mountPath: "/etc/coredns/Corefile"
+          subPath: "Corefile"
+          name: coredns-config-volume
+        - mountPath: "/etc/coredns/zones"
+          name: coredns-zone-volume
+      restartPolicy: Always
       volumes:
-        - name: config-volume
+        - name: coredns-config-volume
           configMap:
-            name: coredns
+            name: coredns-config
             items:
               - key: Corefile
                 path: Corefile
-            defaultMode: 420
         - name: coredns-zone-volume
           configMap:
             name: coredns-zones
-      containers:
-        - name: coredns
-          image: 'k8s.gcr.io/coredns:1.6.7'
-          args:
-            - '-conf'
-            - /etc/coredns/Corefile
-          ports:
-            - name: dns-udp
-              containerPort: 53
-              protocol: UDP
-            - name: dns-tcp
-              containerPort: 53
-              protocol: TCP
-            - name: metrics
-              containerPort: 9153
-              protocol: TCP
-          resources:
-            limits:
-              memory: 170Mi
-            requests:
-              cpu: 100m
-              memory: 70Mi
-          volumeMounts:
-            - name: config-volume
-              readOnly: true
-              mountPath: /etc/coredns/Corefile
-              subPath: Corefile
-            - name: coredns-zone-volume
-              mountPath: /etc/coredns/zones
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: 8080
-              scheme: HTTP
-            initialDelaySeconds: 60
-            timeoutSeconds: 5
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 5
-          readinessProbe:
-            httpGet:
-              path: /ready
-              port: 8181
-              scheme: HTTP
-            timeoutSeconds: 1
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 3
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
-          imagePullPolicy: IfNotPresent
-          securityContext:
-            capabilities:
-              add:
-                - NET_BIND_SERVICE
-              drop:
-                - all
-            readOnlyRootFilesystem: true
-            allowPrivilegeEscalation: false
-      restartPolicy: Always
-      terminationGracePeriodSeconds: 30
-      dnsPolicy: Default
-      nodeSelector:
-        kubernetes.io/os: linux
-      serviceAccountName: coredns
-      serviceAccount: coredns
-      securityContext: {}
-      schedulerName: default-scheduler
-      tolerations:
-        - key: CriticalAddonsOnly
-          operator: Exists
-        - key: node-role.kubernetes.io/master
-          effect: NoSchedule
-      priorityClassName: system-cluster-critical
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 25%
-  revisionHistoryLimit: 10
-  progressDeadlineSeconds: 600
