--- a/persistentVolume/persistentVolume.yaml
+++ b/persistentVolume/persistentVolume.yaml
@@ -49,8 +49,24 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-tftp
+  name: nfs-sftp
   namespace: coredns
+spec:
+  capacity:
+    storage: 5Gi # This size is used to match a volume to a tenents claim
+  accessModes:
+    - ReadWriteOnce # Access modes are defined below
+  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+  nfs:
+    server: node01.home.lab # Please change this to your NFS server
+    path: /clusterfs # Please change this to the relevant share
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: nfs-tftp
+  namespace: tftpd
 spec:
   capacity:
     storage: 5Gi # This size is used to match a volume to a tenents claim
