--- a/ftpsvc/tftp-hpa/tftp-hpa.yaml
+++ b/ftpsvc/tftp-hpa/tftp-hpa.yaml
@@ -2,7 +2,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: tftp-nfs
-  namespace: tftpd
+  namespace: ftpsvc
   labels:
     app.name: tftpd
 spec:
@@ -11,7 +11,7 @@ spec:
   resources:
     requests:
       storage: 4Gi
-  volumeName: nfs-tftp
+  volumeName: tftp-nfs
   volumeMode: Filesystem
 
 ---
@@ -19,7 +19,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tftpd
-  namespace: tftpd
+  namespace: ftpsvc
   labels:
     app.name: tftpd
 spec:
@@ -36,7 +36,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: tftpd
-  namespace: tftpd
+  namespace: ftpsvc
   labels:
     app.name: tftpd
 spec:
