--- a/persistentVolume/persistentVolume.yaml
+++ b/persistentVolume/persistentVolume.yaml
@@ -49,8 +49,8 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-sftp
-  namespace: coredns
+  name: sftp-nfs
+  namespace: ftpsvc
 spec:
   capacity:
     storage: 5Gi # This size is used to match a volume to a tenents claim
@@ -65,8 +65,8 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-tftp
-  namespace: tftpd
+  name: tftp-nfs
+  namespace: ftpsvc
 spec:
   capacity:
     storage: 5Gi # This size is used to match a volume to a tenents claim
