--- a/ftpsvc/tftp-hpa/tftp-hpa.yaml
+++ b/ftpsvc/tftp-hpa/tftp-hpa.yaml
@@ -7,7 +7,7 @@ metadata:
     app.name: tftpd
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 4Gi
@@ -52,12 +52,7 @@ spec:
       containers:
         - name: tftpd
           image: jumanjiman/tftp-hpa:latest
-          imagePullPolicy: Always
-          command:
-            - "/bin/bash"
-            - "-c"
-            - >
-              apt -y install atftpd && atftpd --logfile /dev/stdout --no-fork --verbose 3 --daemon /tftpboot
+          imagePullPolicy: IfNotPresent
           ports:
             - name: tftpd
               containerPort: 69
@@ -69,12 +64,11 @@ spec:
             requests:
               cpu: 100m
               memory: 128Mi
-          volumeMounts:
-            - name: tftp-nfs
-              mountPath: /tftpboot
-              subPath: tftp
-              readOnly: false
-      volumes:
-        - name: tftp-nfs
-          persistentVolumeClaim:
-            claimName: tftp-nfs
+      #     volumeMounts:
+      #       - name: tftp-nfs
+      #         mountPath: /tftpboot
+      #         readOnly: false
+      # volumes:
+      #   - name: tftp-nfs
+      #     persistentVolumeClaim:
+      #       claimName: tftp-nfs
