--- a/slurmctl/slurm-k8s.yaml
+++ b/slurmctl/slurm-k8s.yaml
@@ -1,10 +1,3 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: slurm-ns
-
----
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -113,7 +106,8 @@ spec:
       containers:
       - name: slurm
         image: strusfr/docker-centos7-slurm:latest
-        imagePullPolicy: Always
+        #image: jmcarbo/docker-slurmctld
+        imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
         resources:
@@ -157,6 +151,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: slurmctld
+  namespace: slurm-ns
 spec:
   selector:
     app: slurm
@@ -174,4 +169,4 @@ spec:
       port: 22
       targetPort: 22
   type: LoadBalancer
-  loadBalancerIP: 192.168.1.199
+  loadBalancerIP: 192.168.1.198
