--- a/coredns/lab-configmap.yaml
+++ b/coredns/lab-configmap.yaml
@@ -14,7 +14,9 @@ data:
         4H); Negative Cache TTL
       IN NS ns1
     ns1       IN A 192.168.1.150
-    node01    IN A 192.168.1.20
-    node02    IN A 192.168.1.21
-    node03    IN A 192.168.1.22
-    node04    IN A 192.168.1.23
+    node01.home.lab    IN A 192.168.1.20
+    node02.home.lab    IN A 192.168.1.21
+    node03.home.lab    IN A 192.168.1.22
+    node04.home.lab    IN A 192.168.1.23
+    node05.home.lab    IN A 192.168.1.25
+    node09.home.lab    IN A 192.168.1.198
