--- a/slurmctl/slurm-k8s.yaml
+++ b/slurmctl/slurm-k8s.yaml
@@ -162,6 +162,10 @@ spec:
           subPath: cgroup.conf
         - name: nfs-volume
           mountPath: /clusterfs
+        lifecycle:
+          postStart:
+            exec:
+              command: ["/bin/sh", "-c", "cp /etc/munge/munge.key /clusterfs/munge.key"]
       hostname: node09
       restartPolicy: Always
       volumes:
@@ -196,5 +200,9 @@ spec:
       protocol: TCP
       port: 22
       targetPort: 22
+    - name: tcp8080
+      protocol: TCP
+      port: 8080
+      targetPort: 8080
   type: LoadBalancer
   loadBalancerIP: 192.168.1.198
