--- a/slurmctl/slurm-k8s.yaml
+++ b/slurmctl/slurm-k8s.yaml
@@ -129,7 +129,7 @@ spec:
       - name: slurm
         #image: titansmc/docker-slurmctld
         image: strusfr/docker-ubuntu1604-slurmctld:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         stdin: true
         tty: true
         resources:
