--- a/persistentVolume/persistentVolume.yaml
+++ b/persistentVolume/persistentVolume.yaml
@@ -92,3 +92,51 @@ spec:
   nfs:
     server: node01.home.lab # Please change this to your NFS server
     path: /clusterfs # Please change this to the relevant share
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: logging-es1
+  namespace: logging
+spec:
+  capacity:
+    storage: 10Gi # This size is used to match a volume to a tenents claim
+  accessModes:
+    - ReadWriteOnce # Access modes are defined below
+  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+  nfs:
+    server: node01.home.lab # Please change this to your NFS server
+    path: /mnt/usb # Please change this to the relevant share
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: logging-es2
+  namespace: logging
+spec:
+  capacity:
+    storage: 10Gi # This size is used to match a volume to a tenents claim
+  accessModes:
+    - ReadWriteOnce # Access modes are defined below
+  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+  nfs:
+    server: node01.home.lab # Please change this to your NFS server
+    path: /mnt/usb # Please change this to the relevant share
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: logging-es3
+  namespace: logging
+spec:
+  capacity:
+    storage: 10Gi # This size is used to match a volume to a tenents claim
+  accessModes:
+    - ReadWriteOnce # Access modes are defined below
+  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+  nfs:
+    server: node01.home.lab # Please change this to your NFS server
+    path: /mnt/usb # Please change this to the relevant share
