--- a/chronyd/chronyd.yaml
+++ b/chronyd/chronyd.yaml
@@ -60,6 +60,7 @@ metadata:
     app.name: chronyd
 spec:
   type: LoadBalancer
+  loadBalancerIP: 192.168.1.181
   ports:
     - port: 123
       targetPort: 123
