--- a/ftpsvc/sftp-server/sftpserver.yaml
+++ b/ftpsvc/sftp-server/sftpserver.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ftpsvc
 spec:
   type: "LoadBalancer"
+  loadBalancerIP: 192.168.1.182
   ports:
   - name: "ssh"
     port: 22
