--- a/persistentVolume/persistentVolume.yaml
+++ b/persistentVolume/persistentVolume.yaml
@@ -1,75 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: dockerreg-nfsshare
-  namespace: registry
+  name: nfsshare-usb1
+  # namespace: registry
 spec:
   capacity:
-    storage: 10Gi # This size is used to match a volume to a tenents claim
-  accessModes:
-    - ReadWriteMany # Access modes are defined below
-  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
-  nfs:
-    server: node01.home.lab # Please change this to your NFS server
-    path: /clusterfs # Please change this to the relevant share
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: chartmuseum-nfsshare
-  namespace: registry
-spec:
-  capacity:
-    storage: 5Gi # This size is used to match a volume to a tenents claim
-  accessModes:
-    - ReadWriteMany # Access modes are defined below
-  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
-  nfs:
-    server: node01.home.lab # Please change this to your NFS server
-    path: /clusterfs # Please change this to the relevant share
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: monitoring-nfsshare
-  namespace: monitoring
-spec:
-  capacity:
-    storage: 20Gi # This size is used to match a volume to a tenents claim
-  accessModes:
-    - ReadWriteMany # Access modes are defined below
-  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
-  nfs:
-    server: node01.home.lab # Please change this to your NFS server
-    path: /clusterfs # Please change this to the relevant share
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: sftp-nfs
-  namespace: ftpsvc
-spec:
-  capacity:
-    storage: 5Gi # This size is used to match a volume to a tenents claim
-  accessModes:
-    - ReadWriteMany # Access modes are defined below
-  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
-  nfs:
-    server: node01.home.lab # Please change this to your NFS server
-    path: /clusterfs # Please change this to the relevant share
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: tftp-nfs
-  namespace: ftpsvc
-spec:
-  capacity:
-    storage: 10Gi # This size is used to match a volume to a tenents claim
+    storage: 100Gi # This size is used to match a volume to a tenents claim
   accessModes:
     - ReadWriteMany # Access modes are defined below
   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
@@ -77,66 +13,130 @@ spec:
     server: node01.home.lab # Please change this to your NFS server
     path: /mnt/usb # Please change this to the relevant share
 
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: dashboard-nfsshare
-  namespace: kubernetes-dashboard
-spec:
-  capacity:
-    storage: 1Gi # This size is used to match a volume to a tenents claim
-  accessModes:
-    - ReadWriteMany # Access modes are defined below
-  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
-  nfs:
-    server: node01.home.lab # Please change this to your NFS server
-    path: /clusterfs # Please change this to the relevant share
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: chartmuseum-nfsshare
+#   namespace: registry
+# spec:
+#   capacity:
+#     storage: 5Gi # This size is used to match a volume to a tenents claim
+#   accessModes:
+#     - ReadWriteMany # Access modes are defined below
+#   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+#   nfs:
+#     server: node01.home.lab # Please change this to your NFS server
+#     path: /mnt/usb # Please change this to the relevant share
 
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: logging-es1
-  namespace: logging
-spec:
-  capacity:
-    storage: 10Gi # This size is used to match a volume to a tenents claim
-  accessModes:
-    - ReadWriteOnce # Access modes are defined below
-  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
-  nfs:
-    server: node01.home.lab # Please change this to your NFS server
-    path: /clusterfs # Please change this to the relevant share
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: monitoring-nfsshare
+#   namespace: monitoring
+# spec:
+#   capacity:
+#     storage: 20Gi # This size is used to match a volume to a tenents claim
+#   accessModes:
+#     - ReadWriteMany # Access modes are defined below
+#   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+#   nfs:
+#     server: node01.home.lab # Please change this to your NFS server
+#     path: /mnt/usb # Please change this to the relevant share
 
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: logging-es2
-  namespace: logging
-spec:
-  capacity:
-    storage: 10Gi # This size is used to match a volume to a tenents claim
-  accessModes:
-    - ReadWriteOnce # Access modes are defined below
-  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
-  nfs:
-    server: node01.home.lab # Please change this to your NFS server
-    path: /clusterfs # Please change this to the relevant share
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: sftp-nfs
+#   namespace: ftpsvc
+# spec:
+#   capacity:
+#     storage: 5Gi # This size is used to match a volume to a tenents claim
+#   accessModes:
+#     - ReadWriteMany # Access modes are defined below
+#   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+#   nfs:
+#     server: node01.home.lab # Please change this to your NFS server
+#     path: /mnt/usb # Please change this to the relevant share
 
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: logging-es3
-  namespace: logging
-spec:
-  capacity:
-    storage: 10Gi # This size is used to match a volume to a tenents claim
-  accessModes:
-    - ReadWriteOnce # Access modes are defined below
-  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
-  nfs:
-    server: node01.home.lab # Please change this to your NFS server
-    path: /clusterfs # Please change this to the relevant share
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: tftp-nfs
+#   namespace: ftpsvc
+# spec:
+#   capacity:
+#     storage: 10Gi # This size is used to match a volume to a tenents claim
+#   accessModes:
+#     - ReadWriteMany # Access modes are defined below
+#   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+#   nfs:
+#     server: node01.home.lab # Please change this to your NFS server
+#     path: /mnt/usb # Please change this to the relevant share
+
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: dashboard-nfsshare
+#   namespace: kubernetes-dashboard
+# spec:
+#   capacity:
+#     storage: 1Gi # This size is used to match a volume to a tenents claim
+#   accessModes:
+#     - ReadWriteMany # Access modes are defined below
+#   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+#   nfs:
+#     server: node01.home.lab # Please change this to your NFS server
+#     path: /mnt/usb # Please change this to the relevant share
+
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: logging-es1
+#   namespace: logging
+# spec:
+#   capacity:
+#     storage: 10Gi # This size is used to match a volume to a tenents claim
+#   accessModes:
+#     - ReadWriteOnce # Access modes are defined below
+#   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+#   nfs:
+#     server: node01.home.lab # Please change this to your NFS server
+#     path: /mnt/usb # Please change this to the relevant share
+
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: logging-es2
+#   namespace: logging
+# spec:
+#   capacity:
+#     storage: 10Gi # This size is used to match a volume to a tenents claim
+#   accessModes:
+#     - ReadWriteOnce # Access modes are defined below
+#   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+#   nfs:
+#     server: node01.home.lab # Please change this to your NFS server
+#     path: /mnt/usb # Please change this to the relevant share
+
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: logging-es3
+#   namespace: logging
+# spec:
+#   capacity:
+#     storage: 10Gi # This size is used to match a volume to a tenents claim
+#   accessModes:
+#     - ReadWriteOnce # Access modes are defined below
+#   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+#   nfs:
+#     server: node01.home.lab # Please change this to your NFS server
+#     path: /mnt/usb # Please change this to the relevant share
