--- a/persistentVolume/persistentVolume.yaml
+++ b/persistentVolume/persistentVolume.yaml
@@ -2,16 +2,30 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: nfsshare-usb1
-  # namespace: registry
 spec:
   capacity:
-    storage: 100Gi # This size is used to match a volume to a tenents claim
+    storage: 150Gi # This size is used to match a volume to a tenents claim
   accessModes:
     - ReadWriteMany # Access modes are defined below
   persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
   nfs:
     server: node01.home.lab # Please change this to your NFS server
     path: /mnt/usb # Please change this to the relevant share
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: nfsshare-clusterfs
+spec:
+  capacity:
+    storage: 30Gi # This size is used to match a volume to a tenents claim
+  accessModes:
+    - ReadWriteMany # Access modes are defined below
+  persistentVolumeReclaimPolicy: Recycle # Reclaim policies are defined below 
+  nfs:
+    server: node01.home.lab # Please change this to your NFS server
+    path: /clusterfs # Please change this to the relevant share
 
 # ---
 # apiVersion: v1
