--- a/rpicluster/ansible/rpi-nodes.yml
+++ b/rpicluster/ansible/rpi-nodes.yml
@@ -2,14 +2,14 @@
 all:
   nfsserver:
     hosts:
-      node01.home.lab ansible_host: 10.0.0.2
+      node01.home.lab ansible_ssh_host: 10.0.0.2
     vars:
       node_role: nfsserver
   node:
     hosts:
-      node02.home.lab ansible_host: 10.0.0.3
-      node03.home.lab ansible_host: 10.0.0.4
-      node04.home.lab ansible_host: 10.0.0.5
-      node05.home.lab ansible_host: 10.0.0.6
+      node02.home.lab ansible_ssh_host: 10.0.0.3
+      node03.home.lab ansible_ssh_host: 10.0.0.4
+      node04.home.lab ansible_ssh_host: 10.0.0.5
+      node05.home.lab ansible_ssh_host: 10.0.0.6
     vars:
       node_role: node
