--- a/coredns/lab-deployment.yaml
+++ b/coredns/lab-deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
       - name: coredns-lab
         image: coredns/coredns:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         args: [ "-conf", "/etc/coredns/Corefile" ]
         ports:
           - name: dns-tcp
