--- a/coredns/lab-configmap.yaml
+++ b/coredns/lab-configmap.yaml
@@ -3,6 +3,9 @@ apiVersion: v1
 metadata:
   name: coredns-zones
   namespace: coredns
+  labels:
+    app.kubernetes.io/name: coredns
+    app.kubernetes.io/instance: lab-coredns
 data:
   db.home.lab: |
     $TTL  30M
