--- a/ftpsvc/tftp-hpa/tftp-hpa.yaml
+++ b/ftpsvc/tftp-hpa/tftp-hpa.yaml
@@ -11,8 +11,9 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  volumeName: tftp-nfs
+  volumeName: nfsshare-usb2
   volumeMode: Filesystem
+  storageClassName: nfsusb
 
 ---
 apiVersion: v1
@@ -24,7 +25,7 @@ metadata:
     app.name: tftpd
 spec:
   type: LoadBalancer
-  #loadBalancerIP: 192.168.1.183
+  loadBalancerIP: 10.0.0.23
   ports:
     - port: 69
       targetPort: 69
