--- a/coredns/coredns-configmap.yaml
+++ b/coredns/coredns-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: coredns-config
-  namespace: coredns
+  namespace: rack01
   labels:
     app.kubernetes.io/name: coredns
     app.kubernetes.io/instance: lab-coredns
