--- a/coredns/lab-coredns.yaml
+++ b/coredns/lab-coredns.yaml
@@ -1,8 +1,35 @@
 kind: Service
 apiVersion: v1
 metadata:
+  name: kube-dns-udp
+  namespace: rack01
+  labels:
+    app.kubernetes.io/name: coredns
+    app.kubernetes.io/instance: lab-coredns
+  annotations:
+    prometheus.io/port: '9153'
+    prometheus.io/scrape: 'true'
+    metallb.universe.tf/allow-shared-ip: coredns
+spec:
+  ports:
+    - name: dns-udp
+      protocol: UDP
+      port: 53
+      targetPort: 53
+  selector:
+    app.kubernetes.io/name: coredns
+    app.kubernetes.io/instance: lab-coredns
+  loadBalancerIP: 10.0.0.20
+  type: LoadBalancer
+  sessionAffinity: None
+  externalTrafficPolicy: Local
+
+---
+kind: Service
+apiVersion: v1
+metadata:
   name: kube-dns-tcp
-  namespace: coredns
+  namespace: rack01
   labels:
     app.kubernetes.io/name: coredns
     app.kubernetes.io/instance: lab-coredns
