--- a/registry/dockerRegistry/registryui.yaml
+++ b/registry/dockerRegistry/registryui.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: registryui
-  namespace: registry
+  namespace: rack01
 spec:
   selector:
     matchLabels:
@@ -20,16 +20,16 @@ spec:
         imagePullPolicy: IfNotPresent
         env:
           - name: ENV_DOCKER_REGISTRY_HOST
-            value: "10.0.0.10"
+            value: "https://registry.home.lab"
           - name: ENV_DOCKER_REGISTRY_PORT
-            value: "5000"
+            value: "443"
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: registryui
-  namespace: registry
+  namespace: rack01
 spec:
   selector:
     app: registryui
@@ -38,5 +38,30 @@ spec:
       protocol: TCP
       port: 8080
       targetPort: 80
-  type: LoadBalancer
-  loadBalancerIP: 10.0.0.26
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  labels:
+    app: registryui
+    k8s-app: registryui
+  name: registryui
+  namespace: rack01
+  annotations:
+    ingress.kubernetes.io/ssl-redirect: "true"
+    kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: nginx
+    certmanager.k8s.io/cluster-issuer: "selfsigned-cert"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+spec:
+  tls:
+  - hosts:
+    - registryui.home.lab
+  rules:
+  - host: registryui.home.lab
+    http:
+      paths:
+      - backend:
+          serviceName: registryui
+          servicePort: 8080
