--- a/createNamespaces.yaml
+++ b/createNamespaces.yaml
@@ -26,3 +26,9 @@ kind: Namespace
 apiVersion: v1
 metadata:
   name: cert-manager
+
+---
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: nginx-ingress
