--- a/dashboard/ingress.yaml
+++ b/dashboard/ingress.yaml
@@ -10,7 +10,8 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/cluster-issuer: "selfsigned-cert"
+    #certmanager.k8s.io/cluster-issuer: "selfsigned-cert"
+    cert-manager.io/cluster-issuer: "selfsigned-cert"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   tls:
