--- a/registry/dockerRegistry/registryui.yaml
+++ b/registry/dockerRegistry/registryui.yaml
@@ -52,12 +52,14 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/cluster-issuer: "selfsigned-cert"
+    #certmanager.k8s.io/cluster-issuer: "selfsigned-cert"
+    cert-manager.io/cluster-issuer: "selfsigned-cert"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   tls:
   - hosts:
     - registryui.home.lab
+    secretName: selfsigned-cert-tls
   rules:
   - host: registryui.home.lab
     http:
