--- a/chronyd/chronyd.yaml
+++ b/chronyd/chronyd.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: chronyd
-  namespace: chronyd
+  namespace: kube-system
 spec:
   selector:
     matchLabels:
@@ -15,26 +15,30 @@ spec:
         app: chronyd
     spec:
       hostAliases:
-      - ip: "192.168.1.198"
+      - ip: "10.0.0.2"
         hostnames:
-        - "node09"
-        - "node09.home.lab"
-      - ip: "192.168.1.21"
+        - "node01"
+        - "node01.home.lab"
+      - ip: "10.0.0.3"
         hostnames:
         - "node02"
         - "node02.home.lab"
-      - ip: "192.168.1.22"
+      - ip: "10.0.0.4"
         hostnames:
         - "node03"
         - "node03.home.lab"
-      - ip: "192.168.1.23"
+      - ip: "10.0.0.5"
         hostnames:
         - "node04"
         - "node04.home.lab"
-      - ip: "192.168.1.25"
+      - ip: "10.0.0.6"
         hostnames:
         - "node05"
         - "node05.home.lab"
+      - ip: "10.0.0.9"
+        hostnames:
+        - "node09"
+        - "node09.home.lab"
       containers:
       - name: chronyd
         image: alvistack/chrony:latest
@@ -55,12 +59,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: chronyd
-  namespace: chronyd
+  namespace: kube-system
   labels:
     app.name: chronyd
 spec:
   type: LoadBalancer
-  loadBalancerIP: 192.168.1.181
+  loadBalancerIP: 10.0.0.11
   ports:
     - port: 123
       targetPort: 123
