--- a/ftpsvc/tftp-hpa/tftp-hpa.yaml
+++ b/ftpsvc/tftp-hpa/tftp-hpa.yaml
@@ -2,7 +2,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: tftp-nfs
-  namespace: ftpsvc
+  namespace: rack01
   labels:
     app.name: tftpd
 spec:
@@ -20,12 +20,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tftpd
-  namespace: ftpsvc
+  namespace: rack01
   labels:
     app.name: tftpd
 spec:
-  type: LoadBalancer
-  loadBalancerIP: 10.0.0.23
+  type: ClusterIP
+  #loadBalancerIP: 10.0.0.23
   ports:
     - port: 69
       targetPort: 69
@@ -39,7 +39,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: tftpd
-  namespace: ftpsvc
+  namespace: rack01
   labels:
     app.name: tftpd
 spec:
