--- a/registry/dockerRegistry/registryui.yaml
+++ b/registry/dockerRegistry/registryui.yaml
@@ -4,6 +4,9 @@ kind: Deployment
 metadata:
   name: registryui
   namespace: rack01
+  labels:
+    app: registryui
+    k8s-app: registryui
 spec:
   selector:
     matchLabels:
@@ -30,6 +33,9 @@ kind: Service
 metadata:
   name: registryui
   namespace: rack01
+  labels:
+    app: registryui
+    k8s-app: registryui
 spec:
   selector:
     app: registryui
