--- a/registry/dockerRegistry/registryui.yaml
+++ b/registry/dockerRegistry/registryui.yaml
@@ -49,16 +49,15 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  labels:
-    app: registryui
-    k8s-app: registryui
+  #labels:
+  #  app: registryui
+  # k8s-app: registryui
   name: registryui
   namespace: rack01
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
-    #certmanager.k8s.io/cluster-issuer: "selfsigned-cert"
     cert-manager.io/cluster-issuer: "selfsigned-cert"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
