--- a/certmgr/issuer.yaml
+++ b/certmgr/issuer.yaml
@@ -9,7 +9,7 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: selfsigned-cert
-sspec:
+spec:
   dnsNames:
     - home.lab
   secretName: selfsigned-cert-tls
